--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -6918,7 +6918,128 @@
         </div>
     </details>
 </section>
-                
+       <!-- Madde 169 -->
+<details id="madde-169" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 169 – Ormanların Korunması ve Geliştirilmesi
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Devlet, ormanların korunması ve sahalarının genişletilmesi için gerekli kanunları koyar ve tedbirleri alır. <strong>Yanan ormanların yerinde yeni orman yetiştirilir,</strong> bu yerlerde başka çeşit tarım ve hayvancılık yapılamaz. Bütün ormanların gözetimi Devlete aittir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Devlet ormanlarının <strong>mülkiyeti devrolunamaz.</strong> Devlet ormanları kanuna göre, Devletçe yönetilir ve işletilir. Bu ormanlar <strong>zamanaşımı ile mülk edinilemez</strong> ve kamu yararı dışında irtifak hakkına konu olamaz.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Ormanlara zarar verebilecek hiçbir faaliyet ve eyleme müsaade edilemez. Ormanların tahrip edilmesine yol açan siyasi propaganda yapılamaz; <strong>münhasıran orman suçları için genel ve özel af çıkarılamaz.</strong> Ormanları yakmak, ormanı yok etmek veya daraltmak amacıyla işlenen suçlar genel ve özel af kapsamına alınamaz.
+        </blockquote>
+        <blockquote-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Orman olarak muhafazasında bilim ve fen bakımından hiçbir yarar görülmeyen, aksine tarım alanlarına dönüştürülmesinde kesin yarar olduğu tespit edilen yerler ile <strong>31/12/1981 tarihinden önce</strong> bilim ve fen bakımından orman niteliğini tam olarak kaybetmiş olan tarla, bağ, meyvelik, zeytinlik gibi çeşitli tarım alanlarında veya hayvancılıkta kullanılmasında yarar olduğu tespit edilen araziler, şehir, kasaba ve köy yapılarının toplu olarak bulunduğu yerler dışında, <strong>orman sınırlarında daraltma yapılamaz.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm">Bu madde, Anayasa'nın en sert ve en korumacı hükümlerinden biridir. Ormanları, sıradan bir arazi parçası olarak değil, ülkenin vazgeçilmez bir varlığı olarak görür ve onları özel anayasal güvenceler altına alır.</p>
+        </div>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: Ormanların Anayasal Zırhı (5 Kalkan)</h6>
+            <p style="text-align: justify;" class="text-sm">Anayasa, ormanları beş temel kalkan ile korur:</p>
+            <ol class="list-decimal pl-5 text-sm space-y-2">
+                <li><strong>Mülkiyet Devredilemez:</strong> Devlet ormanlarının mülkiyeti devrolunamaz. Yani satılamaz, bağışlanamaz.</li>
+                <li><strong>Zamanaşımı İşlemez:</strong> Hiç kimse, devlet ormanını yıllarca işgal etse bile zamanaşımı yoluyla mülk edinemez.</li>
+                <li><strong>Yanan Orman Kuralı:</strong> Yanan ormanların yerinde yeni orman yetiştirilir. Bu alanlar, imara veya başka bir tarımsal faaliyete açılamaz. Bu kural, rant amacıyla kasıtlı orman yangınlarının önüne geçmeyi hedefler.</li>
+                <li><strong>Af Yasağı:</strong> Ormanlara zarar vermeye yönelik suçlar için Anayasa, af yetkisini dahi kısıtlamıştır.</li>
+                <li><strong>Sınırların Daraltılması Yasağı:</strong> Kural olarak, orman sınırlarında daraltma yapılamaz. Maddede sayılan çok teknik ve eski tarihli (31/12/1981'den önce niteliğini kaybetmiş yerler gibi) istisnalar dışında bu yasak mutlaktır.</li>
+            </ol>
+        </div>
+        <div class="warning-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Sınavların Gözdesi: ORMAN SUÇLARINA AF YOKTUR!</h6>
+            <p style="text-align: justify;" class="text-sm">Bu, Anayasa'daki en istisnai ve en güçlü yasaklardan biridir:</p>
+             <ul class="list-disc pl-5 text-sm mt-2 space-y-1">
+                <li>Münhasıran orman suçları için <strong>genel ve özel af çıkarılamaz.</strong></li>
+                <li>Ormanları yakmak, yok etmek veya daraltmak amacıyla işlenen suçlar, çıkarılacak bir genel veya özel af kapsamına <strong>alınamaz.</strong></li>
+            </ul>
+            <p style="text-align: justify;" class="text-sm mt-2">Bu kural, TBMM'nin af yetkisinin (Md. 87) en önemli anayasal sınırıdır ve sınavlarda kesinlikle bilinmelidir.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 170 -->
+<details id="madde-170" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 170 – Orman Köylüsünün Korunması
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Ormanlar içinde veya bitişiğindeki köyler halkının kalkındırılması, ormanların ve bütünlüğünün korunması bakımlarından, ormanın gözetilmesi ve işletilmesinde Devletle bu halkın işbirliğini sağlayıcı tedbirlerle, 31/12/1981 tarihinden önce bilim ve fen bakımından orman niteliğini tamamen kaybetmiş yerlerin değerlendirilmesi; bilim ve fen bakımından orman olarak muhafazasında yarar görülmeyen yerlerin tespiti ve orman sınırları dışına çıkartılması; orman içindeki köyler halkının kısmen veya tamamen bu yerlere yerleştirilmesi için Devlet eliyle anılan yerlerin ihya edilerek bu halkın yararlanmasına tahsisi kanunla düzenlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Devlet, bu halkın işletme araç ve gereçleriyle diğer girdilerinin sağlanmasını kolaylaştırıcı tedbirleri alır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Orman içinden nakledilen köyler halkına ait araziler, Devlet ormanı olarak derhal ağaçlandırılır.
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm">Bu madde, bir önceki maddenin sert korumacı yapısını sosyal devlet ilkesiyle dengeler. Devletin, ormanları korurken, o ormanların içinde veya bitişiğinde yaşayan köylüleri de korumak ve kalkındırmakla görevli olduğunu belirtir. Devlet, bu halkın işletme araç ve gereçlerini sağlamasını kolaylaştırıcı tedbirler alır.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 171 -->
+<details id="madde-171" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 171 – Kooperatifçiliğin Geliştirilmesi
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Devlet, milli ekonominin yararlarını dikkate alarak, öncelikle <strong>üretimin artırılmasını ve tüketicinin korunmasını amaçlayan</strong> kooperatifçiliğin gelişmesini sağlayacak tedbirleri alır.
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm">Devletin, milli ekonominin yararlarını dikkate alarak, iki temel amacı gözeten kooperatifçiliğin gelişmesini sağlayacak tedbirleri alması bir anayasal görevdir:</p>
+            <ol class="list-decimal pl-5 text-sm mt-2 space-y-1">
+                <li>Üretimin artırılması</li>
+                <li>Tüketicinin korunması</li>
+            </ol>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 172 -->
+<details id="madde-172" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 172 – Tüketicilerin Korunması
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Devlet, <strong>tüketicileri koruyucu ve aydınlatıcı tedbirler alır,</strong> tüketicilerin kendilerini koruyucu girişimlerini <strong>teşvik eder.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm">Bu madde, devletin tüketiciyi korumadaki iki yönlü görevini belirtir:</p>
+            <ul class="list-disc pl-5 text-sm mt-2 space-y-1">
+                <li><strong>Aktif Rol:</strong> Devlet, tüketicileri koruyucu ve aydınlatıcı tedbirler alır (Örn: Tüketici kanunları çıkarmak, denetim yapmak).</li>
+                <li><strong>Pasif/Destekleyici Rol:</strong> Devlet, tüketicilerin kendilerini koruyucu girişimlerini (Örn: Tüketici dernekleri kurmaları) teşvik eder.</li>
+            </ul>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 173 -->
+<details id="madde-173" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 173 – Esnaf ve Sanatkarların Korunması
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Devlet, <strong>esnaf ve sanatkarı koruyucu ve destekleyici tedbirleri alır.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+            <p style="text-align: justify;" class="text-sm">Anayasa, ekonomideki özel rolleri sebebiyle esnaf ve sanatkârları da özel olarak koruma altına almıştır. Devlet, esnaf ve sanatkârı koruyucu ve destekleyici tedbirleri alır.</p>
+        </div>
+    </div>
+</details>         
 </section>
  
             </article>
