--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -7039,7 +7039,132 @@
             <p style="text-align: justify;" class="text-sm">Anayasa, ekonomideki özel rolleri sebebiyle esnaf ve sanatkârları da özel olarak koruma altına almıştır. Devlet, esnaf ve sanatkârı koruyucu ve destekleyici tedbirleri alır.</p>
         </div>
     </div>
-</details>         
+</details>      
+                <!-- Bölüm Özeti -->
+<div class="mt-16 p-6 bg-green-100 rounded-lg border-l-4 border-green-600 highlight-box" role="mark">
+    <h4 class="font-bold text-green-800 text-xl mb-3 flex items-center">
+        <span class="mr-3 text-2xl">✅</span> Mali ve Ekonomik Hükümler - Bölüm Özeti
+    </h4>
+    <p class="text-green-900 mb-4" style="text-align: justify;">
+        Bu bölümde, devletin mali disiplinini sağlayan Bütçe ve Kesinhesap süreçlerini ve "sosyal devlet" ilkesinin bir yansıması olarak ekonomiye ve belirli gruplara yönelik görevlerini inceledik.
+    </p>
+    <ul class="list-none space-y-3">
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">💰</span>
+            <div>
+                <strong>Mali Hükümler (Devletin Cüzdanı):</strong> Bütçeyi mali yılbaşından <strong>en az 75 gün önce Cumhurbaşkanı</strong> sunar. <strong>Veto edilemez</strong>, vekiller <strong>gider artırıcı teklif veremez</strong> ve içine bütçe dışı konu eklenemez. Kabul edilmezse önce <strong>geçici bütçe</strong>, o da olmazsa <strong>önceki yılın bütçesi yeniden değerleme oranıyla</strong> uygulanır. Kesinhesap ise yeni yıl bütçesiyle birlikte görüşülür.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">📈</span>
+            <div>
+                <strong>Ekonomik Hükümler (Devletin Rolü):</strong> Devlet kalkınmayı planlar. <strong>Ekonomik ve Sosyal Konsey</strong>, Cumhurbaşkanına <strong>istişarî (danışmanlık)</strong> görüş bildirir. Devlet, piyasalarda <strong>tekelleşmeyi önler</strong> ve doğal kaynakların özel sektörce işletilmesi için <strong>kanunun açık izni</strong> gerekir.
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">🌲</span>
+            <div>
+                <strong>Ormanların Anayasal Zırhı:</strong> Anayasa'nın en güçlü koruması altındadır. Mülkiyeti devredilemez, yanan ormanlar yeniden ağaçlandırılır ve en önemlisi, ormanları yakma, yok etme veya daraltma suçlarına <strong>kesinlikle af çıkarılamaz.</strong>
+            </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-green-700">👥</span>
+            <div>
+                <strong>Korunan Diğer Gruplar:</strong> Devlet, sosyal devlet ilkesi gereği <strong>orman köylüsünü, kooperatifçiliği, tüketicileri</strong> ve <strong>esnaf ile sanatkârları</strong> koruyucu ve destekleyici tedbirler alır.
+            </div>
+        </li>
+    </ul>
+</div>
+
+<!-- Hafıza Teknikleri ve Kritik Sayılar Özeti -->
+<div class="mt-12 p-6 bg-blue-50 rounded-lg border-l-4 border-blue-500">
+    <h4 class="font-bold text-blue-800 text-xl mb-3 flex items-center">
+        <span class="mr-3 text-2xl">🧠</span> Bu Bölümün Sınav Şifreleri
+    </h4>
+    <div class="grid md:grid-cols-2 gap-x-8 gap-y-4">
+        <div>
+            <h5 class="font-semibold text-blue-900 mb-2">Sayısal Şifreler (Bütçe Takvimi):</h5>
+            <ul class="list-disc pl-5 space-y-1 text-sm text-blue-900">
+                <li><strong>75 GÜN ÖNCE:</strong> CB, bütçeyi Meclis'e sunar.</li>
+                <li><strong>55 GÜN:</strong> Bütçe Komisyonu'nun görüşme süresi.</li>
+                <li><strong>6 AY SONRA:</strong> CB, kesinhesabı Meclis'e sunar.</li>
+                <li><strong>75 GÜN İÇİNDE:</strong> Sayıştay, kesinhesap raporunu Meclis'e sunar.</li>
+            </ul>
+        </div>
+        <div>
+            <h5 class="font-semibold text-blue-900 mb-2">Kritik Kavramlar ve Yasaklar:</h5>
+            <ul class="list-disc pl-5 space-y-1 text-sm text-blue-900">
+                <li><strong>BÜTÇEYE VETO YOK:</strong> Cumhurbaşkanı bütçeyi geri gönderemez.</li>
+                <li><strong>VEKİLE HARCAMA TEKLİFİ YASAK:</strong> Bütçe görüşmelerinde vekiller harcamayı artıramaz.</li>
+                <li><strong>ORMAN SUÇLARINA AF YOK:</strong> Anayasa'nın en sert ve istisnasız yasağıdır.</li>
+                <li><strong>DOĞAL KAYNAKLAR:</strong> Mülkiyeti Devletindir. Özel sektörün işletmesi için "kanunun açık izni" şarttır.</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<!-- Bölüm Sonu Testi -->
+<div class="mt-12 p-6 bg-sky-50 border-t-4 border-sky-500 rounded-lg strategy-box" role="region">
+    <h4 class="font-bold text-sky-900 text-xl mb-4 flex items-center">
+        <span class="mr-3 text-2xl">🧪</span> Mali ve Ekonomik Hükümler - Tekrar Testi
+    </h4>
+    <div class="space-y-6">
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">1.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Çoktan Seçmeli</div></div>
+            <p class="text-slate-700 mb-3 text-lg">1982 Anayasası'na göre, Sayıştay, merkezi yönetim kesinhesap kanunu teklifine ilişkin genel uygunluk bildirimini, teklifin Meclis'e verilmesinden başlayarak en geç kaç gün içinde Meclis'e sunar?</p>
+            <div class="text-slate-600 space-y-2">
+                <div class="flex items-center"><span class="mr-3 font-bold">a)</span> 45</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">b)</span> 55</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">c)</span> 60</div>
+                <div class="flex items-center"><span class="mr-3 font-bold">d)</span> 75</div>
+            </div>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">2.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Doğru / Yanlış</div></div>
+            <p class="text-slate-700 text-lg">Bütçe kanununun süresinde yürürlüğe konulamaması halinde, yeni bütçe kanunu kabul edilinceye kadar bir önceki yılın bütçesi aynen uygulanır. (<strong>D / Y</strong>)</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">3.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Kavram Analizi</div></div>
+            <p class="text-slate-700 text-lg">Anayasa'nın 169. maddesinde yer alan ve TBMM'nin af yetkisine bir sınırlama getiren "af yasağı" hangi suçları kapsamaktadır?</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">4.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Eşleştirme</div></div>
+            <p class="text-slate-700 text-lg">Aşağıdaki kavramları ilgili olduğu anayasal ilke veya kurumla eşleştiriniz.<br>I. Tekelleşmeyi Önlemek<br>II. İstişarî Görüş Bildirmek<br>III. Kanunun Açık İzni</p>
+             <p class="text-slate-500 text-sm mt-2">a) Tabii Servetlerin Özel Sektörce İşletilmesi<br>b) Piyasaların Denetimi<br>c) Ekonomik ve Sosyal Konsey</p>
+        </div>
+        <div class="p-5 bg-white rounded-lg border border-sky-200 shadow-sm test-soru">
+            <div class="flex items-center text-sky-800 font-bold mb-3"><span class="mr-2">5.</span><div class="px-3 py-1 text-sm bg-sky-100 rounded-full">Liste</div></div>
+            <p class="text-slate-700 text-lg">Anayasa'nın 170-173. maddeleri arasında devlete, koruyucu ve destekleyici tedbirler alması yönünde görev yüklenen dört ekonomik/sosyal grubu yazınız.</p>
+        </div>
+    </div>
+    <details class="mt-6">
+        <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevap Anahtarını Göster</summary>
+        <div class="mt-3 p-6 bg-slate-50 rounded-lg border border-slate-200">
+            <div class="divide-y divide-slate-200">
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">1</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>d) 75</strong>.<br><strong>Açıklama:</strong> Madde 161'e göre, Cumhurbaşkanı kesinhesabı 6 ay içinde sunar, Sayıştay ise bu sunumdan itibaren 75 gün içinde raporunu Meclis'e gönderir.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">2</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>Yanlış</strong>.<br><strong>Açıklama:</strong> Madde 161'e göre, bir önceki yılın bütçesi "aynen" değil, "yeniden değerleme oranına göre artırılarak" uygulanır.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">3</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> Münhasıran orman suçları için ve ormanları yakmak, ormanı yok etmek veya daraltmak amacıyla işlenen suçlar.<br><strong>Açıklama:</strong> Bu suçlar için genel ve özel af çıkarılması Anayasa tarafından yasaklanmıştır.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">4</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> I-b, II-c, III-a<br><strong>Açıklama:</strong> Devlet piyasaları denetlerken tekelleşmeyi önler. Ekonomik ve Sosyal Konsey, Cumhurbaşkanına istişarî görüş bildirir. Tabii servetlerin özel sektörce işletilmesi kanunun açık iznine bağlıdır.</p></div>
+                </div>
+                <div class="py-5 flex items-start">
+                    <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">5</div>
+                    <div class="ml-4"><p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong><br>1. Orman Köylüsü (Md. 170)<br>2. Kooperatifler (Md. 171)<br>3. Tüketiciler (Md. 172)<br>4. Esnaf ve Sanatkârlar (Md. 173)</p></div>
+                </div>
+            </div>
+        </div>
+    </details>
+</div>
 </section>
  
             </article>
