--- a/konu-anlatimlari/ortak-konular/02-ataturk-ilkeleri.html
+++ b/konu-anlatimlari/ortak-konular/02-ataturk-ilkeleri.html
@@ -5,18 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>İnkılap Tarihi Ders Notları | Adalet GYS Portalı</title>
     
-    <!-- Projenin merkezi CSS dosyaları -->
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
     <link rel="stylesheet" href="/adalet-gys-portal/assets/css/konu-anlatim.css">
     
-    <!-- Şablon yükleyici script -->
     <script src="/adalet-gys-portal/assets/js/template-loader.js" defer></script>
 </head>
 <body data-needs-template="page">
     <main class="container page-content">
         <div class="card p-8 md:p-12 max-w-6xl mx-auto">
 
-            <!-- Standart Ana Başlık -->
             <div class="text-center mb-12 pb-8 border-b border-slate-200">
                 <h1 class="section-title text-4xl md:text-5xl">
                     T.C. İnkılap Tarihi Ders Notları
@@ -26,7 +23,6 @@
                 </p>
             </div>
 
-            <!-- Standart Test Merkezi Kartı -->
             <div class="my-10 p-6 rounded-xl bg-white shadow-lg border test-merkezi-karti">
                  <div class="flex flex-col sm:flex-row items-center justify-between gap-4">
                     <div class="flex items-center">
@@ -51,21 +47,21 @@
 
                 <h3 class="text-2xl font-semibold text-slate-800 mb-4 mt-8">Savaşın Nedenleri</h3>
                 <ul class="space-y-4 list-none p-0">
-                    <li class="flex items-start">
+                    <li class="flex">
                         <svg class="flex-shrink-0 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-6 9l2 2 4-4"></path></svg>
-                        <p><strong>Sömürgecilik ve Pazar Arayışı:</strong> Sanayileşen ve siyasi birliğini geç kuran (1870) İtalya, İngiltere ve Fransa gibi büyük devletlerden geri kalmamak için kendine sömürge ve pazar arıyordu.</p>
+                        <p class="ml-4"><strong>Sömürgecilik ve Pazar Arayışı:</strong> Sanayileşen ve siyasi birliğini geç kuran (1870) İtalya, İngiltere ve Fransa gibi büyük devletlerden geri kalmamak için kendine sömürge ve pazar arıyordu.</p>
                     </li>
-                    <li class="flex items-start">
+                    <li class="flex">
                         <svg class="flex-shrink-0 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
-                        <p><strong>Coğrafi Yakınlık ve Tarihi Bağlar:</strong> Trablusgarp (bugünkü Libya), İtalya'ya coğrafi olarak çok yakındı ve Roma İmparatorluğu'ndan kalma tarihi bağ iddiaları işgali cazip kılıyordu.</p>
+                        <p class="ml-4"><strong>Coğrafi Yakınlık ve Tarihi Bağlar:</strong> Trablusgarp (bugünkü Libya), İtalya'ya coğrafi olarak çok yakındı ve Roma İmparatorluğu'ndan kalma tarihi bağ iddiaları işgali cazip kılıyordu.</p>
                     </li>
-                     <li class="flex items-start">
+                     <li class="flex">
                         <svg class="flex-shrink-0 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                        <p><strong>Diplomatik Zemin Hazırlığı:</strong> İtalya, işgalden önce Rusya ile yaptığı <strong>Raconda Antlaşması</strong> (1909) gibi gizli antlaşmalarla diğer büyük devletlerin onayını almış, Osmanlı'yı yalnız bırakmıştı.</p>
+                        <p class="ml-4"><strong>Diplomatik Zemin Hazırlığı:</strong> İtalya, işgalden önce Rusya ile yaptığı <strong>Raconda Antlaşması</strong> (1909) gibi gizli antlaşmalarla diğer büyük devletlerin onayını almış, Osmanlı'yı yalnız bırakmıştı.</p>
                     </li>
-                    <li class="flex items-start">
+                    <li class="flex">
                         <svg class="flex-shrink-0 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-                        <p><strong>Osmanlı'nın Zayıflığı:</strong> Bu en kritik nedendir. Donanma Haliç'te çürümüştü. Mısır ise İngiliz işgalinde olduğu için karadan yardım gönderilemiyordu.</p>
+                        <p class="ml-4"><strong>Osmanlı'nın Zayıflığı:</strong> Bu en kritik nedendir. Donanma Haliç'te çürümüştü. Mısır ise İngiliz işgalinde olduğu için karadan yardım gönderilemiyordu.</p>
                     </li>
                 </ul>
 
@@ -158,12 +154,12 @@
                         <div class="cevap"><p>Cevap: <strong>Karadağ.</strong></p></div>
                     </details>
                     <details>
-                        <summary><span>5. I. Balkan Savaşı'nı sona erdiren ve Osmanlı'nın Midye-Enez hattının batısındaki topraklarını kaybettiği antlaşma hangisidir?</span></summary>
+                        <summary><span>5. I. Balkan Savaşı'nı sona erdiren antlaşma hangisidir?</span></summary>
                         <div class="cevap"><p>Cevap: <strong>Londra Antlaşması (1913).</strong></p></div>
                     </details>
                     <details>
-                        <summary><span>6. Bâb-ı Âli Baskını ile hangi hükümet devrilmiş, yerine kimin başkanlığında bir hükümet kurulmuştur?</span></summary>
-                        <div class="cevap"><p>Cevap: <strong>Kâmil Paşa Hükümeti</strong> devrilmiş, yerine <strong>Mahmut Şevket Paşa Hükümeti</strong> kurulmuştur.</p></div>
+                        <summary><span>6. Bâb-ı Âli Baskını ile hangi hükümet devrilmiştir?</span></summary>
+                        <div class="cevap"><p>Cevap: <strong>Kâmil Paşa Hükümeti</strong> devrilmiştir.</p></div>
                     </details>
                      <details>
                         <summary><span>7. "Hamidiye Kahramanı" olarak anılan komutan kimdir?</span></summary>
