--- a/konu-anlatimlari/ortak-konular/02-ataturk-ilkeleri.html
+++ b/konu-anlatimlari/ortak-konular/02-ataturk-ilkeleri.html
@@ -42,26 +42,27 @@
                 
                 <h2 class="subsection-title text-3xl font-bold">Trablusgarp Savaşı (1911-1912)</h2>
                 <p>
-                    Siyasi birliğini geç tamamlayan İtalya'nın sömürgecilik yarışına dahil olmak amacıyla Osmanlı'nın Afrika'daki son toprağına saldırmasıyla başladı. Bu savaş, Osmanlı Devleti'nin bölgeyi ne karadan ne de denizden savunacak gücünün kalmadığını acı bir şekilde ortaya koymuştur.
+                    Siyasi birliğini geç tamamlayan İtalya'nın sömürgecilik yarışına dahil olmak amacıyla Osmanlı'nın Afrika'daki son toprağına saldırmasıyla başladı...
                 </p>
 
                 <h3 class="text-2xl font-semibold text-slate-800 mb-4 mt-8">Savaşın Nedenleri</h3>
+                <!-- DÜZELTME: Liste yapısı CSS ile uyumlu hale getirildi -->
                 <ul class="space-y-4 list-none p-0">
-                    <li class="flex">
-                        <svg class="flex-shrink-0 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-6 9l2 2 4-4"></path></svg>
-                        <p class="ml-4"><strong>Sömürgecilik ve Pazar Arayışı:</strong> Sanayileşen ve siyasi birliğini geç kuran (1870) İtalya, İngiltere ve Fransa gibi büyük devletlerden geri kalmamak için kendine sömürge ve pazar arıyordu.</p>
+                    <li class="flex items-start">
+                        <svg class="text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-6 9l2 2 4-4"></path></svg>
+                        <p><strong>Sömürgecilik ve Pazar Arayışı:</strong> Sanayileşen ve siyasi birliğini geç kuran (1870) İtalya, İngiltere ve Fransa gibi büyük devletlerden geri kalmamak için kendine sömürge ve pazar arıyordu.</p>
                     </li>
-                    <li class="flex">
-                        <svg class="flex-shrink-0 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
-                        <p class="ml-4"><strong>Coğrafi Yakınlık ve Tarihi Bağlar:</strong> Trablusgarp (bugünkü Libya), İtalya'ya coğrafi olarak çok yakındı ve Roma İmparatorluğu'ndan kalma tarihi bağ iddiaları işgali cazip kılıyordu.</p>
+                    <li class="flex items-start">
+                        <svg class="text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
+                        <p><strong>Coğrafi Yakınlık ve Tarihi Bağlar:</strong> Trablusgarp (bugünkü Libya), İtalya'ya coğrafi olarak çok yakındı...</p>
                     </li>
-                     <li class="flex">
-                        <svg class="flex-shrink-0 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                        <p class="ml-4"><strong>Diplomatik Zemin Hazırlığı:</strong> İtalya, işgalden önce Rusya ile yaptığı <strong>Raconda Antlaşması</strong> (1909) gibi gizli antlaşmalarla diğer büyük devletlerin onayını almış, Osmanlı'yı yalnız bırakmıştı.</p>
+                     <li class="flex items-start">
+                        <svg class="text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+                        <p><strong>Diplomatik Zemin Hazırlığı:</strong> İtalya, işgalden önce Rusya ile yaptığı <strong>Raconda Antlaşması</strong> (1909) gibi gizli antlaşmalarla diğer büyük devletlerin onayını almıştı...</p>
                     </li>
-                    <li class="flex">
-                        <svg class="flex-shrink-0 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-                        <p class="ml-4"><strong>Osmanlı'nın Zayıflığı:</strong> Bu en kritik nedendir. Donanma Haliç'te çürümüştü. Mısır ise İngiliz işgalinde olduğu için karadan yardım gönderilemiyordu.</p>
+                    <li class="flex items-start">
+                        <svg class="text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
+                        <p><strong>Osmanlı'nın Zayıflığı:</strong> Bu en kritik nedendir. Donanma Haliç'te çürümüştü. Mısır ise İngiliz işgalinde olduğu için karadan yardım gönderilemiyordu.</p>
                     </li>
                 </ul>
 
