--- a/_templates/sinav-sablonu.html
+++ b/_templates/sinav-sablonu.html
@@ -3,147 +3,137 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sınav Şablonu</title>
+    <title>Sınav Arayüzü - Adalet GYS Portalı</title>
+    <link rel="stylesheet" href="/adalet-gys-portal/assets/css/style.css">
+    <link rel="stylesheet" href="/adalet-gys-portal/assets/css/test.css">
 </head>
 <body>
-    <header class="navbar">
-        <div class="container">
-            <a href="/adalet-gys-portal/index.html" class="navbar-brand">Adalet GYS Portalı</a>
-            <nav class="navbar-nav">
-                <a href="/adalet-gys-portal/index.html" class="nav-link">Ana Sayfa</a>
-                <div class="nav-item dropdown">
-                    <a href="/adalet-gys-portal/konu-anlatimlari/" class="nav-link">Konu Anlatımları</a>
-                    <div class="dropdown-menu">
-                        <a href="/adalet-gys-portal/konu-anlatimlari/ortak-konular/">Ortak Konular</a>
-                        <a href="/adalet-gys-portal/konu-anlatimlari/alan-konulari/">Alan Konuları</a>
+    <!-- Ana Sınav Konteyneri -->
+    <main id="app-container" class="exam-container" data-sheet-url="https://example.com/sorular.csv" data-exam-duration="60">
+        
+        <!-- Hoşgeldin Ekranı -->
+        <section id="welcome-screen" class="card welcome-screen">
+            <div class="text-center py-12">
+                <h1 class="text-3xl font-bold text-teal-700 mb-6">Sınava Hazır mısınız?</h1>
+                <div class="exam-info-box">
+                    <div class="info-item">
+                        <span>Soru Sayısı:</span>
+                        <strong id="total-question-count">0</strong>
+                    </div>
+                    <div class="info-item">
+                        <span>Süre:</span>
+                        <strong id="total-duration-display">0 Dakika</strong>
                     </div>
                 </div>
-                <div class="nav-item dropdown">
-                    <a href="/adalet-gys-portal/deneme-sinavlari/" class="nav-link">Deneme Sınavları</a>
-                    <div class="dropdown-menu">
-                        <a href="/adalet-gys-portal/deneme-sinavlari/genel-denemeler/">Genel Denemeler</a>
-                        <a href="/adalet-gys-portal/deneme-sinavlari/alan-denemeleri/">Alan Denemeleri</a>
-                        <a href="/adalet-gys-portal/deneme-sinavlari/ortak-konular-denemeleri/">Ortak Konular Denemeleri</a>
+                <button id="start-exam-btn" class="start-btn mt-8" disabled>
+                    <span id="start-btn-full-text">SINAVA BAŞLA</span>
+                </button>
+            </div>
+        </section>
+
+        <!-- Sınav Ekranı -->
+        <section id="quiz-screen" class="hidden">
+            <!-- Zamanlayıcı ve İlerleme Çubuğu -->
+            <div class="exam-header">
+                <div class="timer-container">
+                    <div class="timer-box">
+                        <span>Kalan Süre:</span>
+                        <span id="remaining-time" class="timer">00:00:00</span>
+                    </div>
+                    <div class="progress-bar-container">
+                        <div id="progress-bar" class="progress-bar"></div>
                     </div>
                 </div>
-                <a href="/adalet-gys-portal/hakkinda.html" class="nav-link">Hakkında</a>
-                <a href="/adalet-gys-portal/iletisim.html" class="nav-link">İletişim</a>
-            </nav>
-        </div>
-    </header>
+                <div class="question-counter" id="question-counter">Soru 1/10</div>
+            </div>
 
-    <main id="app-container" class="container page-content">
-        <div class="max-w-4xl mx-auto">
-            <div id="timer-announcer" aria-live="polite" aria-atomic="true"></div>
+            <!-- Soru Alanı -->
+            <div class="question-area">
+                <div id="question-text-container" class="card">
+                    <pre id="question-text">Soru metni yükleniyor...</pre>
+                </div>
 
-            <div id="welcome-screen">
-                <div class="card p-8 md:p-12 text-center">
-                    <div class="bg-slate-50 border border-slate-200 rounded-lg p-6 mb-10">
-                        <h1 class="text-3xl md:text-4xl font-bold text-slate-800 bg-teal-50 p-2 rounded" id="exam-main-title">Adalet Bakanlığı Görevde Yükselme Sınavı</h1>
-                        <p class="text-lg md:text-xl text-slate-500 mt-3" id="exam-subtitle">Deneme Sınavı</p>
-                    </div>
-                    <div id="warning-box" class="hidden text-left mb-6 p-4 bg-yellow-50 border-l-4 border-yellow-500 rounded-md">
-                        <h3 class="font-bold text-yellow-800">Uyarı</h3>
-                        <p class="text-yellow-700 mt-2" id="warning-message"></p>
-                    </div>
-                    <div class="text-left grid md:grid-cols-2 gap-8 mt-12 mb-10">
-                        <div class="bg-slate-50 p-6 rounded-lg border">
-                            <h2 class="text-xl font-semibold text-slate-800 border-b pb-3 mb-4">Sınav Bilgileri</h2>
-                            <ul class="space-y-3 text-slate-700">
-                                <li><b>Toplam Süre:</b><span id="total-duration-display">&nbsp;Hesaplanıyor...</span></li>
-                                <li><b>Toplam Soru Sayısı:</b>&nbsp;<span id="total-question-count">0</span>&nbsp;Soru</li>
-                            </ul>
-                        </div>
-                        <div class="bg-slate-50 p-6 rounded-lg border">
-                            <h2 class="text-xl font-semibold text-slate-800 border-b pb-3 mb-4">Kullanım Kılavuzu</h2>
-                            <ul class="space-y-3 text-slate-700">
-                                <li class="flex items-start"><span class="mr-3 text-teal-500">✓</span><p><b>Cevaplama:</b> Bir seçeneği işaretlemek için doğrudan üzerine tıklayın.</p></li>
-                                <li class="flex items-start"><span class="mr-3 text-teal-500">✓</span><p><b>İşaretleme:</b> Sağ üstteki <svg class="inline-block h-5 w-5 text-slate-500 -mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6H8.5l-1-1H5a2 2 0 00-2 2z"></path></svg> simgesine tıklayarak bir soruyu daha sonra gözden geçirmek için işaretleyebilirsiniz.</p></li>
-                                <li class="flex items-start"><span class="mr-3 text-teal-500">✓</span><p><b>Gezinme:</b> "Önceki" ve "Sonraki" butonlarını kullanarak sorular arasında geçiş yapabilirsiniz.</p></li>
-                                <li class="flex items-start"><span class="mr-3 text-teal-500">✓</span><p><b>Raporlama:</b> Sınav bitiminde, performans özetinizi, yanlış cevaplarınızı ve işaretlediğiniz soruları içeren bir analiz sayfası sizi karşılayacaktır.</p></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <button id="start-exam-btn" class="start-btn w-full md:w-auto inline-flex items-center justify-center text-white font-bold text-lg px-12 py-4 rounded-lg" disabled>
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-                        <span id="start-btn-full-text">Sorular Yükleniyor...</span>
-                    </button>
+                <!-- Seçenekler -->
+                <div id="options-container" class="options-grid">
+                    <!-- Seçenekler JavaScript ile eklenecek -->
                 </div>
             </div>
 
-            <div id="quiz-screen" class="hidden">
-                <div class="progress-bar-container card mb-6 p-1"><div id="progress-bar" class="progress-bar"></div></div>
-                <div class="card p-6 relative">
-                    <div class="flex justify-between items-center mb-6 bg-slate-50 -m-6 p-6 pb-4 rounded-t-lg border-b">
-                        <span id="question-counter" class="text-lg font-bold text-teal-500"></span>
-                        <div class="flex items-center space-x-4 sm:space-x-6 text-center">
-                            <div><span class="text-xs font-medium text-slate-500">GEÇEN SÜRE</span><div id="elapsed-time" class="text-xl font-bold">00:00:00</div></div>
-                            <div class="w-px h-8 bg-slate-200"></div>
-                            <div><span class="text-xs font-medium text-slate-500">KALAN SÜRE</span><div id="remaining-time" class="text-xl font-bold text-teal-600">00:00:00</div></div>
-                        </div>
-                        <button id="mark-review-btn" title="İncelemek için işaretle" class="flag-icon text-slate-400 hover:text-yellow-500" aria-label="Soruyu işaretle">
-                            <svg id="flag-outline-icon" xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M3 21v-4m0 0V5a2 2 0 012-2h6.5l1 1H21l-3 6 3 6H8.5l-1-1H5a2 2 0 00-2 2z"></path></svg>
-                            <svg id="flag-solid-icon" xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 hidden" viewBox="0 0 20 20" fill="currentColor"><path d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z"></path></svg>
-                        </button>
-                    </div>
-                    <div class="mt-8 mb-8"><div id="question-text-container"><pre id="question-text"></pre></div></div>
-                    <div id="options-container" class="grid grid-cols-1 gap-4"></div>
-                </div>
-                <div class="flex justify-between items-center mt-6">
-                    <button id="prev-btn" class="px-6 py-2 bg-white rounded-md hover:bg-slate-50 shadow-sm disabled:opacity-50" aria-label="Önceki soru">Önceki</button>
-                    <button id="finish-btn" class="px-6 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 shadow-sm" aria-label="Sınavı bitir">Sınavı Bitir</button>
-                    <button id="next-btn" class="px-6 py-2 bg-teal-600 text-white rounded-md hover:bg-teal-700 shadow-sm disabled:opacity-50" aria-label="Sonraki soru">Sonraki</button>
-                </div>
-                <div class="card p-4 mt-6">
-                    <h3 class="text-lg font-semibold mb-3">Soru Gezgini</h3>
-                    <div class="flex flex-wrap items-center gap-x-4 gap-y-2 text-xs text-slate-500 mb-4 pb-2 border-b">
-                        <div class="flex items-center gap-1.5"><span class="w-3 h-3 rounded-full bg-green-500"></span>Cevaplanmış</div>
-                        <div class="flex items-center gap-1.5"><svg class="w-4 h-4 text-yellow-400" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd"></path></svg>İşaretli</div>
-                        <div class="flex items-center gap-1.5"><span class="w-3 h-3 rounded-full bg-slate-300"></span>Boş</div>
-                    </div>
-                    <div id="nav-palette-container" class="grid grid-cols-8 sm:grid-cols-10 md:grid-cols-15 lg:grid-cols-20 gap-2"></div>
-                </div>
+            <!-- Kontrol Butonları -->
+            <div class="control-buttons">
+                <button id="prev-btn" class="btn-secondary" disabled>Önceki</button>
+                <button id="mark-review-btn" class="btn-secondary">
+                    <span id="flag-outline-icon">🚩</span>
+                    <span id="flag-solid-icon" class="hidden">🏴</span>
+                    İncele
+                </button>
+                <button id="next-btn" class="btn">Sonraki</button>
+                <button id="finish-btn" class="btn-danger">Sınavı Bitir</button>
             </div>
 
-            <div id="result-screen" class="hidden">
-                <div class="card p-6 md:p-8">
-                    <h2 id="result-title" class="text-3xl font-bold text-center mb-6">Sınav Sonucu</h2>
-                    <div id="performance-summary" class="text-center text-lg text-slate-700 mb-8"></div>
-                    <div class="grid grid-cols-2 md:grid-cols-4 gap-4 text-center mb-10">
-                        <div class="p-4 bg-green-100 rounded-lg"><p class="text-2xl font-bold" id="correct-count">0</p><p>Doğru</p></div>
-                        <div class="p-4 bg-red-100 rounded-lg"><p class="text-2xl font-bold" id="incorrect-count">0</p><p>Yanlış</p></div>
-                        <div class="p-4 bg-slate-200 rounded-lg"><p class="text-2xl font-bold" id="empty-count">0</p><p>Boş</p></div>
-                        <div id="success-rate-box" class="p-4 bg-blue-100 rounded-lg"><p class="text-2xl font-bold" id="success-rate">0%</p><p id="success-text">Başarı</p></div>
-                    </div>
-                    <div class="flex flex-wrap items-center gap-4 mb-6">
-                        <button class="tab-btn flex-1 tab-active" id="wrong-answers-tab"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-red-500" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"></path></svg><span>Yanlış Cevaplar</span></button>
-                        <button class="tab-btn flex-1" id="marked-questions-tab"><svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-yellow-500" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M3 6a3 3 0 013-3h10a1 1 0 01.8 1.6L14.25 8l2.55 3.4A1 1 0 0116 13H6a1 1 0 00-1 1v3a1 1 0 11-2 0V6z" clip-rule="evenodd"></path></svg><span>İşaretlenen Sorular</span></button>
-                    </div>
-                    <div id="wrong-answers-panel"><div id="wrong-answers-container" aria-live="polite"></div></div>
-                    <div id="marked-questions-panel" class="hidden"><div id="marked-questions-container" aria-live="polite"></div></div>
-                    <div class="text-center mt-12"><button id="restart-btn" class="start-btn text-white font-bold px-8 py-3 rounded-lg">Yeni Sınav Başlat</button></div>
-                </div>
+            <!-- Navigasyon Paleti -->
+            <div id="nav-palette-container" class="nav-palette">
+                <!-- Soru numaraları JavaScript ile eklenecek -->
             </div>
-        </div>
+        </section>
+
+        <!-- Sonuç Ekranı -->
+        <section id="result-screen" class="hidden">
+            <div class="card result-summary">
+                <h2 class="text-2xl font-bold text-center mb-6">Sınav Sonucu</h2>
+                
+                <div class="stats-grid">
+                    <div class="stat-box correct">
+                        <span>Doğru</span>
+                        <strong id="correct-count">0</strong>
+                    </div>
+                    <div class="stat-box incorrect">
+                        <span>Yanlış</span>
+                        <strong id="incorrect-count">0</strong>
+                    </div>
+                    <div class="stat-box empty">
+                        <span>Boş</span>
+                        <strong id="empty-count">0</strong>
+                    </div>
+                    <div class="stat-box success">
+                        <span>Başarı</span>
+                        <strong id="success-rate">0%</strong>
+                    </div>
+                </div>
+
+                <!-- Sonuç Sekmeleri -->
+                <div class="result-tabs">
+                    <button id="wrong-answers-tab" class="tab-btn tab-active">Yanlış Cevaplar</button>
+                    <button id="marked-questions-tab" class="tab-btn">İncelenenler</button>
+                </div>
+
+                <!-- Sonuç İçerikleri -->
+                <div class="result-content">
+                    <div id="wrong-answers-panel">
+                        <div id="wrong-answers-container"></div>
+                    </div>
+                    <div id="marked-questions-panel" class="hidden">
+                        <div id="marked-questions-container"></div>
+                    </div>
+                </div>
+
+                <button id="restart-btn" class="btn mt-8">Yeniden Başlat</button>
+            </div>
+        </section>
     </main>
 
-    <footer class="footer">
-        <div class="container">
-            <p>&copy; 2025 Adalet GYS Portalı. Tüm hakları saklıdır.</p>
-        </div>
-    </footer>
-
-    <div id="alert-modal" class="fixed inset-0 bg-slate-900 bg-opacity-75 hidden items-center justify-center p-4 z-50">
-        <div class="card p-8 max-w-sm mx-auto text-center">
-            <div class="mx-auto flex items-center justify-center h-12 w-12 rounded-full bg-yellow-100 mb-4">
-                <svg class="h-6 w-6 text-yellow-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path>
-                </svg>
+    <!-- Uyarı Modali -->
+    <div id="alert-modal" class="hidden">
+        <div class="modal-overlay"></div>
+        <div class="modal-content card">
+            <h3 id="alert-modal-title" class="text-xl font-bold"></h3>
+            <p id="alert-modal-message" class="my-4"></p>
+            <div class="modal-actions">
+                <button id="alert-modal-ok-btn" class="btn">Tamam</button>
             </div>
-            <h3 class="text-xl font-bold text-slate-900 mb-4" id="alert-modal-title">UYARI</h3>
-            <p class="text-slate-600 mb-8" id="alert-modal-message"></p>
-            <button id="alert-modal-ok-btn" class="px-8 py-2 bg-yellow-500 text-white rounded-md hover:bg-yellow-600">Tamam</button>
         </div>
     </div>
+
+    <script src="/adalet-gys-portal/assets/js/test-engine.js"></script>
 </body>
 </html>
