--- a/_templates/sinav-sablonu.html
+++ b/_templates/sinav-sablonu.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sınav Şablonu</title>
+    <link href="/assets/css/tailwind.css" rel="stylesheet">
 </head>
 <body>
     <header class="navbar">
